--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<input id="file" type="file" name="file">
 		</form>
 
-		<script src="js/enchant.min.js"></script>
-		<script src="js/main.js"></script>
+		<script src="enchant.min.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
