--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<form>
-			<input id="file" type="file" name="file">
+			<input id="file" type="file" accept=".dump" name="file">
 		</form>
 
 		<script src="enchant.min.js"></script>
