--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 	<head>
 		<meta charset="UTF-8">
+		<link rel="icon" href="/img/Item.png" />
 		<title>CHaserLogViewer</title>
 	</head>
 	<body>
